--- a/case-study/src/app/facility/facility-edit/facility-edit.component.html
+++ b/case-study/src/app/facility/facility-edit/facility-edit.component.html
@@ -30,7 +30,7 @@
           <div class="col-sm-9">
             <select id="facilityType"
                     class="form-control"
-                    onchange="showFacilityType()" formControlName="facilityType">
+                    formControlName="facilityType" [compareWith]="compareByID">
               <option value="null" *ngFor="let item of facilityType" [ngValue]="item">{{item.facilityType}}</option>
 
             </select>
@@ -39,31 +39,37 @@
         <div class="form-group row">
           <label for="name" class="col-sm-3 col-form-label">Name</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="name">
+            <input type="text" class="form-control" id="name" formControlName="name">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="name" class="col-sm-3 col-form-label">Image</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="image" formControlName="image">
           </div>
         </div>
         <div class="form-group row">
           <label for="code" class="col-sm-3 col-form-label">Code</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="code">
+            <input type="text" class="form-control" id="code" formControlName="code">
           </div>
         </div>
         <div class="form-group row">
           <label for="floorSquare" class="col-sm-3 col-form-label">Floor square</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="floorSquare">
+            <input type="number" class="form-control" id="floorSquare" formControlName="floorSquare">
           </div>
         </div>
         <div class="form-group row">
           <label for="rentalFee" class="col-sm-3 col-form-label">Rental Fee</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="rentalFee" step="any">
+            <input type="number" class="form-control" id="rentalFee" step="any" formControlName="rentalFee">
           </div>
         </div>
         <div class="form-group row">
           <label for="maximumPeople" class="col-sm-3 col-form-label">Maximum people</label>
           <div class="col-sm-9">
-            <input type="number" class="form-control" id="maximumPeople">
+            <input type="number" class="form-control" id="maximumPeople" formControlName="maximumPeople">
           </div>
         </div>
         <div class="form-group row">
@@ -71,7 +77,7 @@
           <div class="col-sm-9">
             <select class="form-control"
                     id="rentType"
-                    name="rentType" >
+                    name="rentType" formControlName="rentType" [compareWith]="compareByID">
               <option *ngFor="let item of rentType" [ngValue]="item" >{{item.rentType}}</option>
 
             </select>
@@ -82,7 +88,7 @@
           <div class="form-group row">
             <label for="roomStandard" class="col-sm-3 col-form-label">Room standard</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="roomStandard">
+              <input type="text" class="form-control" id="roomStandard" formControlName="roomStandard">
             </div>
           </div>
           <div class="form-group row">
@@ -94,7 +100,7 @@
           <div class="form-group row">
             <label for="numberFloor" class="col-sm-3 col-form-label">Number of floor</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="numberFloor">
+              <input type="text" class="form-control" id="numberFloor" formControlName="numberFloor">
             </div>
           </div>
         </div>
@@ -103,7 +109,7 @@
           <div class="form-group row">
             <label for="poolSquare" class="col-sm-3 col-form-label">Pool square</label>
             <div class="col-sm-9">
-              <input type="number" class="form-control" id="poolSquare">
+              <input type="number" class="form-control" id="poolSquare" formControlName="poolSquare">
             </div>
           </div>
         </div>
@@ -112,7 +118,7 @@
           <div class="form-group row">
             <label for="freeServiceInclude" class="col-sm-3 col-form-label">Free service include</label>
             <div class="col-sm-9">
-              <input type="number" class="form-control" id="freeServiceInclude">
+              <input type="number" class="form-control" id="freeServiceInclude" formControlName="freeServiceInclude">
             </div>
           </div>
         </div>
@@ -121,7 +127,7 @@
             <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
           </div>
           <div class="mx-2">
-            <a href="#" class="button button--active home-banner-btn">Update</a>
+            <button type="submit"  class="button button--active home-banner-btn">Update</button>
           </div>
         </div>
       </div>
